@@ -1,3 +1,7 @@
+2003-02-27  John Levon  <levon@movementarian.org>
+
+	* doc/oprofile.xml: clarifiy --separate=kernel
+
 2003-02-25  John Levon  <levon@movementarian.org>
 
 	* configure.in: clarify --with-kernel-support
